# huggingface-lifecycle

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.json  experiment_metadata.json  final_model.safetensors  mkdocs.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_output.txt  test_results.txt  training_state.pt
.github/workflows/: docs.yml  release.yml  test.yml
checkpoints/: checkpoint-step-0.json  checkpoint-step-0.pt  checkpoint-step-1.json  checkpoint-step-1.pt  checkpoint-step-2.json  checkpoint-step-2.pt  checkpoint-step-3.json  checkpoint-step-3.pt  checkpoint-step-4.json  checkpoint-step-4.pt  checkpoint-step-5.json  checkpoint-step-5.pt
docs/: api.md  authentication.rst  checkpoint.rst  conf.py  dataset.rst  index.md  index.rst  model_registry.rst  quickstart.rst  repository.rst  training_state.rst  utilities.rst
docs/api/: auth.rst  checkpoint.rst  dataset.rst  exceptions.rst  manager.rst  model_registry.rst  repo.rst  training_state.rst  utils.rst
examples/: README.md  complete_training_example.py  quickstart.py  simple_training_example.py
src/hf_lifecycle/: __init__.py  auth.py  checkpoint.py  cli.py  dataset.py  exceptions.py  logger.py  manager.py  metadata.py  model_registry.py  repo.py  retention.py  training_state.py  utils.py
tests/: conftest.py  test_auth.py  test_checkpoint.py  test_checkpoint_hub.py  test_cli.py  test_dataset.py  test_metadata.py  test_model_registry.py  test_repo.py  test_retention.py  test_training_state.py  test_utils.py  test_version.py
