[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "huggingface-lifecycle"
version = "0.1.0"
description = "Comprehensive lifecycle management for HuggingFace training workflows"
readme = "README.md"
authors = [
  { name = "Dark Coder", email = "codewithdark90@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["huggingface", "transformers", "lifecycle", "training", "mlops"]
dependencies = [
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "types-tqdm",
    "types-requests",
    "build",
    "twine",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
"Homepage" = "https://github.com/codewithdark-git/huggingface-lifecycle"
"Bug Tracker" = "https://github.com/codewithdark-git/huggingface-lifecycle/issues"

[project.scripts]
hf-lifecycle = "hf_lifecycle.cli:main"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "huggingface_hub.*",
    "torch.*",
    "tqdm.*",
    "setuptools.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=hf_lifecycle --cov-report=term-missing"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_api: marks tests that require API access",
]
